--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,9 @@
       </ul>
       <ul id="secondary-nav" class="selfclear">
         <li class="admin"><%= link_to "Admin", :controller => "admin" %></li>
-        <li class="users"><%= link_to "Users", :controller => "users", :action => "index" %></li>
+        <% if current_user.is_admin %>
+          <li class="users"><%= link_to "Users", :controller => "users", :action => "index" %></li>
+        <% end %>
       </ul>
     </div><!-- /.wrap -->
   </div><!-- /#crossbar -->
