--- a/app/views/trimet_report_groups/_form.html.erb
+++ b/app/views/trimet_report_groups/_form.html.erb
@@ -9,8 +9,10 @@
       </li>
     </ol>
     
-    <div class="actions">
-      <%= form.submit %>
-    </div>
+    <% if current_user.is_admin %>
+      <div class="actions">
+        <%= form.submit %>
+      </div>
+    <% end %>
   </fieldset>
 <% end %>
