--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -32,7 +32,7 @@
   <fieldset>
     <%= render :partial => "form", :locals=>{:f=>f} %>
 
-    <% if @trip.latest? -%>
+    <% if @trip.latest? && current_user.is_admin -%>
       <div class="actions">
         <%= submit_tag 'Update' %>
       </div>
