--- a/app/views/trips/show_import.html.erb
+++ b/app/views/trips/show_import.html.erb
@@ -1,21 +1,29 @@
 <div id="page-header">
-  <h1>Import Trips</h1>
+  <% if current_user.is_admin %>
+    <h1>Import Trips</h1>
+  <% else %>
+    <h1>Past Imports</h1>
+  <% end %>
 </div>
 
-<%=form_tag url_for(:action=>:import), :method=>:post, :multipart => true %>
-  <fieldset>
+<% if current_user.is_admin %>
+  <%= form_tag url_for(:action=>:import), :method=>:post, :multipart => true %>
+    <fieldset>
 
-    <ol class="section first">
-      <li><input id="file-import" name="file-import" type="file" value="" size="100" /></li>
-    </ol>
+      <ol class="section first">
+        <li><input id="file-import" name="file-import" type="file" value="" size="100" /></li>
+      </ol>
 
-    <div class="actions">
-      <input id="trip-import" type="submit" value="Import" />
-    </div>
+      <div class="actions">
+        <input id="trip-import" type="submit" value="Import" />
+      </div>
 
-  </fieldset>
-</form>
-<h1>Past Imports</h1>
+    </fieldset>
+  </form>
+
+  <h1>Past Imports</h1>
+<% end %>
+
 <table>
   <tr>
     <th>Imported At</th>
