Don't truncate notes in trip adjustment history

--- a/app/views/trips/adjustments.html.erb
+++ b/app/views/trips/adjustments.html.erb
@@ -34,7 +34,7 @@
         <%= Trip.completed_trip_count_for_valid_start(adjustment.valid_start) %>
       </td>
       <td>
-        <%= truncate(adjustment.adjustment_notes) %>
+        <%= adjustment.adjustment_notes %>
       </td>
       <td>
         <% if adjustment['cnt'] == '1' -%>
