--- a/app/views/flex_reports/_row.html.erb
+++ b/app/views/flex_reports/_row.html.erb
@@ -111,17 +111,17 @@
   <% end %>
   <% if @report.results_fields.member? 'escort_volunteer_hours' %>
     <td class="number">
-      <%= number_with_delimiter(row.escort_volunteer_hours.to_i) %>
+      <%= number_with_precision(row.escort_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'admin_volunteer_hours' %>
     <td class="number">
-      <%= number_with_delimiter(row.admin_volunteer_hours.to_i) %>
+      <%= number_with_precision(row.admin_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
   <% end %>
   <% if @report.results_fields.member? 'total_volunteer_hours' %>
     <td class="number total">
-      <%= number_with_delimiter(row.total_volunteer_hours.to_i) %>
+      <%= number_with_precision(row.total_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
   <% end %>
 </tr>
