--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -7,7 +7,7 @@
     <% if defined?(short_name) && short_name.present? %>
       <%= "#{short_name}" %>
     <% elsif defined?(short_name) && short_name.blank? %>
-      <%= "Unspecified" %>
+      <%= "#{group_field_name} Not Specified" %>
     <% else %>
       <%= "Grand" %>
     <% end %> Total
