Add subtitle field, use it in place of the description field for the report presentation

--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -6,6 +6,10 @@
           <%= f.text_field :name %>
         </li>
         <li>
+          <h2 class="section-header">Subtitle</h2>
+          <%= f.text_field :subtitle %>
+        </li>
+        <li>
           <h2 class="section-header">Grouping</h2>
           <select id="group-by" name="flex_report[group_by]">
             <% @group_bys.each do |fields| %>
