--- a/app/views/predefined_reports/ride_purpose.html.erb
+++ b/app/views/predefined_reports/ride_purpose.html.erb
@@ -10,59 +10,59 @@
     </tr>
   </thead>
   <tbody>
-      <% @results.keys.sort.each do |county| %>
-       <tr>
-         <th class="contrast banner" colspan="<%= @trip_purposes.size + 1 %>"><%= county %> County</th>
-       </tr>
+    <% @results.keys.sort.each do |county| %>
+      <tr>
+        <th class="contrast banner" colspan="<%= @trip_purposes.size + 1 %>"><%= county %> County</th>
+      </tr>
   
-        <% @results[county].keys.sort_by{|provider| provider.try(:name) || "Unspecified" }.each do |provider| %>
-         <tr>
-           <th scope="row"><%= provider.try :name || "Unspecified" %></th>
-           <% for purpose in @trip_purposes %>
-             <td class="number"><%= @results[county][provider].by_purpose[purpose] %></td>
-           <% end %>
-         </tr>
-        <% end %>
-
-        <!-- totals -->
+      <% @results[county].keys.sort_by{|provider| provider.try(:name) || "Unspecified" }.each do |provider| %>
         <tr>
-          <th class="contrast" scope="row"><%= county %> County Total</th>
-           <% total = RidePurposeRow.sum(@results[county]) %>
-           <% for purpose in @trip_purposes %>
-             <td class="number"><%= total.by_purpose[purpose] %></td>
-           <% end %>
-        </tr>
-
-        <!-- percentages -->
-        <tr>
-           <% percentages = total.percentages %>
-          <th scope="row">% of total county trips</th>
+          <th scope="row"><%= provider.try :name || "Unspecified" %></th>
           <% for purpose in @trip_purposes %>
-             <td class="number"><%= "%.2f\%" % percentages[purpose] %></td>
+            <td class="number"><%= number_with_delimiter(@results[county][provider].by_purpose[purpose]) %></td>
           <% end %>
         </tr>
       <% end %>
+
+      <!-- totals -->
+      <tr>
+        <th class="contrast" scope="row"><%= county %> County Total</th>
+        <% total = RidePurposeRow.sum(@results[county]) %>
+        <% for purpose in @trip_purposes %>
+          <td class="number"><%= number_with_delimiter(total.by_purpose[purpose]) %></td>
+        <% end %>
+      </tr>
+
+      <!-- percentages -->
+      <tr>
+        <% percentages = total.percentages %>
+        <th scope="row">% of total county trips</th>
+        <% for purpose in @trip_purposes %>
+          <td class="number"><%= "%.2f\%" % percentages[purpose] %></td>
+        <% end %>
+      </tr>
+    <% end %>
   
   </tbody>
   <tbody class="totals">
-       <tr>
-         <th class="contrast banner" colspan="<%= @trip_purposes.size + 1 %>">All Trips</th>
-       </tr>
+    <tr>
+      <th class="contrast banner" colspan="<%= @trip_purposes.size + 1 %>">All Trips</th>
+    </tr>
     <!-- grand totals -->
     <tr>
-      <th class="contrast" scope="row">Grand  Total</th>
-       <% total = RidePurposeRow.sum(@results) %>
-       <% for purpose in @trip_purposes %>
-         <td class="number"><%= total.by_purpose[purpose] %></td>
-       <% end %>
+      <th class="contrast" scope="row">Grand Total</th>
+      <% total = RidePurposeRow.sum(@results) %>
+      <% for purpose in @trip_purposes %>
+        <td class="number"><%= number_with_delimiter(total.by_purpose[purpose]) %></td>
+      <% end %>
     </tr>
 
-      <!-- grand total percentages -->
+    <!-- grand total percentages -->
     <tr>
-       <% percentages = total.percentages %>
+      <% percentages = total.percentages %>
       <th scope="row">% of total trips</th>
       <% for purpose in @trip_purposes %>
-         <td class="number"><%= "%.2f\%" % percentages[purpose] %></td>
+        <td class="number"><%= "%.2f\%" % percentages[purpose] %></td>
       <% end %>
     </tr>
   </tbody>
