--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -10,6 +10,10 @@
           <%= f.text_field :subtitle %>
         </li>
         <li>
+          <h2 class="section-header">Category</h2>
+          <%= f.text_field :category %>
+        </li>
+        <li>
           <h2 class="section-header">Grouping</h2>
           <select id="group-by" name="flex_report[group_by]">
             <% @group_bys.each do |fields| %>
