--- a/app/views/flex_reports/index.html.erb
+++ b/app/views/flex_reports/index.html.erb
@@ -1,3 +1,60 @@
+<% content_for :head do -%>
+  <%= javascript_tag do -%>
+    $(document).ready(function(){
+      $('.flex-reports .report-category').css('clear', 'none').css('float', 'left');
+      $('#all-reports').css('margin-left', '235px');
+
+      var $menu = $('<ul id="reports-menu">');
+      $menu.css({
+        'float':      'left',
+        'list-style': 'none',
+        'margin':     '0',
+        'padding':    '0',
+        'width':      '215px'
+      });
+      $('#page-header').after($menu);
+      
+      var $reports = $('#all-reports h1').sort(function(a, b){return $(a).text().toLowerCase() > $(b).text().toLowerCase() ? 1 : -1;});
+      $reports.each(function(){
+        $li = $('<li>');
+        $a = $('<a>');
+        $a.text($(this).text());
+        $a.data('target', $(this).closest('.report-category'));
+        $li.append($a)
+        $menu.append($li);
+        $a.click(function(){
+          $this = $(this);
+          $('.report-category:visible').hide();
+          $('#reports-menu li').css('background-color', '#eee');
+          $this.closest('li').css('background-color', '#ccc');
+          $this.data('target').fadeIn('fast');
+        });
+      });
+      
+      $menu.find('li a').css({
+        'color':       '#000 !important',
+        'cursor':      'pointer',
+        'display':     'block',
+        'font-weight': 'bold'
+      });
+
+      $menu.find('li').css({
+        '-moz-border-radius':    '5px',
+        '-webkit-border-radius': '5px',
+        'background-color':      '#eee',
+        'border':                '1px solid #bbb',
+        'border-radius':         '5px',
+        'margin':                '4px 0',
+        'padding':               '5px'
+      });
+      
+      $('.report-category').hide();
+      $menu.before('<h2>Available Reports:</h2>');
+      $menu.find('li:first').css('background-color', '#ccc').find('a').click();
+    });
+  <% end -%>
+<% end -%>
+
 <div id="page-header">
   <h1>Flex Reports</h1>
 </div>
@@ -7,26 +64,31 @@
 <% end %>
 
 <ul id="all-reports">
-  <% for report in @reports %>
-    <li class="flex-report" data-id="<%= report.id %>">
-      <%= form_for report, :html => { :method => 'delete' } do |f| %>
-        <input type="hidden" name="report[id]" value="<%= report.id %>" />
-        <% if current_user.is_admin %>
-          <span class="handle">[Reorder]</span>
-          <%= link_to "Edit Report", edit_flex_report_path(report), :class => "edit" %>
-          <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
-        <% else %>
-          <%= link_to "View Report Definition", edit_flex_report_path(report), :class => "details" %>
-        <% end %>
-      <% end %>
+  <% @reports.group_by(&:category).each do |category, report_group| %>
+    <div class="report-category">
+      <h1><%= category || "Unspecified Category" %></h1>
+      <% report_group.each do |report| %>
+        <li class="flex-report" data-id="<%= report.id %>">
+          <%= form_for report, :html => { :method => 'delete' } do |f| %>
+            <input type="hidden" name="report[id]" value="<%= report.id %>" />
+            <% if current_user.is_admin %>
+              <span class="handle">[Reorder]</span>
+              <%= link_to "Edit Report", edit_flex_report_path(report), :class => "edit" %>
+              <%= f.submit "Delete Report", :confirm=>"Are you sure you want to delete this report?", :class=>'delete-report' %>
+            <% else %>
+              <%= link_to "View Report Definition", edit_flex_report_path(report), :class => "details" %>
+            <% end %>
+          <% end %>
 
-      <%= form_for report, :html => { :class => "run-report", :method => :get } do |f| %>
-        <fieldset>
-          <h2 class="report-header"><%= report.name %></h2>
-          <%= content_tag :p, report.description if report.description.present? %>
-          <%= render "run_form", :f => f, :report => report, :ol_class => "" %>
-        </fieldset>
+          <%= form_for report, :html => { :class => "run-report", :method => :get } do |f| %>
+            <fieldset>
+              <h2 class="report-header"><%= report.name %></h2>
+              <%= content_tag :p, report.description if report.description.present? %>
+              <%= render "run_form", :f => f, :report => report, :ol_class => "" %>
+            </fieldset>
+          <% end %>
+        </li>
       <% end %>
-    </li>
+    </div>
   <% end %>
 </ul>
