--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -10,4 +10,5 @@
   <li><%= link_to "TriMet Providers", :controller => "trimet_providers" %></li>
   <li><%= link_to "TriMet Programs", :controller => "trimet_programs" %></li>
   <li><%= link_to "TriMet Report Groups", :controller => "trimet_report_groups" %></li>
+  <li><%= link_to "Flex Report Categories", :controller => "report_categories" %></li>
 </ul>
