--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -113,7 +113,7 @@ tr.sum-totals td {
 }
 table tr.totals td,
 table td.total {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 td.inner-most-field {
@@ -125,7 +125,15 @@ div.report-wrapper td.indent {
 }
 
 .nobreak {
-white-space: nowrap;
+  white-space: nowrap;
+}
+
+.break-before {
+  page-break-before:always;
+}
+
+.break-after {
+  page-break-after:always;
 }
 
 /* 
@@ -134,5 +142,5 @@ white-space: nowrap;
  *
  */
 body.ride-purpose th.data {
-    width: 8%;
+  width: 8%;
 }
