Fix office grouping in SPD report
Use only the most recent office associated with a customer,
so that if a customer switches offices mid-month, they still
only show up on one list.

--- a/app/views/predefined_reports/spd.html.erb
+++ b/app/views/predefined_reports/spd.html.erb
@@ -25,7 +25,7 @@
         <tr>
           <td><%= customer_row[:case_manager] %></td>
           <td><%= customer_row[:date_enrolled].try(:strftime,'%m-%d-%Y') %></td>
-          <td><%= customer.name %></td>
+          <td><%= link_to customer.name, customer %></td>
           <td><%= customer.prime_number %></td>
           <td><%= customer_row[:service_end].try(:strftime,'%m-%d-%Y') %></td>
           <td class="number"><%= customer_row[:approved_rides] %></td>
