--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1185,6 +1185,22 @@ body.flex-reports span#group-by-custom-wrapper span {
   display: block;
 }
 
+body.flex-reports input.delete-report {
+  background: url(images/cross-button.png) left center no-repeat scroll;
+  float: right;
+  color: #e5004d;
+  text-decoration: none;
+  font-size: 11px;
+  line-height: 16px;
+  border: 0;
+  padding: 5px 25px 5px 17px;
+}
+input.delete-report:hover,
+input.delete-report:active {
+    color: #ff4d88;
+    text-decoration: underline;
+}
+
 /* 
  *
  * Flex Reports 
@@ -1228,20 +1244,6 @@ li.flex-report a.edit {
   margin-right : 5px;
 }
 
-input.delete-report {
-    background: url(images/cross-button.png) left center no-repeat scroll;
-    color: #e5004d;
-    text-decoration: none;
-    font-size: 11px;
-    line-height: 16px;
-    border: 0;
-    padding: 5px 0 5px 17px;
-}
-input.delete-report:hover,
-input.delete-report:active {
-    color: #ff4d88;
-    text-decoration: underline;
-}
 ul#all-reports {
 	padding : 0;
 	margin : 0;
