--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -21,7 +21,7 @@
       <td><%= provider.provider_type %></td>
       <td><%= provider.agency %></td>
       <td><%= provider.branch %></td>
-      <td><%= link_to "Delete", provider_url(provider), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this provider?" if current_user.is_admin && provider.allocations.empty? %></td>
+      <td><%= link_to "Delete", provider_url(provider), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this provider?" if current_user.is_admin && provider.allocations.empty? && provider.allocations_as_reporting_agency.empty? %></td>
     </tr>
   <% end %>
 </table>
