--- a/app/views/layouts/flex_reports.html.erb
+++ b/app/views/layouts/flex_reports.html.erb
@@ -1,6 +1,7 @@
 <% content_for :menu_bar do %>
   <ul id="subnav" class="selfclear">
     <% if current_user.is_admin %>
+      <li><%= link_to 'Download full list as CSV', flex_reports_path(:format => :csv), :class => :csv %></li>
       <li><%= link_to "Define New Flex Report", new_flex_report_path, :class => :add %></li>
     <% end %>
   </ul>
