--- a/app/views/flex_reports/show.html.erb
+++ b/app/views/flex_reports/show.html.erb
@@ -7,7 +7,7 @@
     <%= report_month_range @report.start_date, @report.query_end_date %>
   </span>
   <span class="separator csv">|</span>
-  <%= link_to "CSV", params.merge({:action=>:csv}), :class=>"csv" %>
+  <%= link_to "CSV", params.merge({:format=>:csv}), :class=>"csv" %>
   <% if current_user.is_admin %>
     <span class="separator edit">|</span>
     <%= link_to "Edit Report", edit_flex_report_path(@report), :class => "edit" %>
