--- a/app/views/flex_reports/index.html.erb
+++ b/app/views/flex_reports/index.html.erb
@@ -49,7 +49,7 @@
       });
       
       $('.report-category').hide();
-      $menu.before('<h2>Available Reports:</h2>');
+      $menu.before('<h2>Report Categories</h2>');
       $menu.find('li:first').css('background-color', '#ccc').find('a').click();
     });
   <% end -%>
