--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -1,4 +1,4 @@
-<% row = ReportRow.sum(row, nil, @report.results_fields.keys) %>
+<% row = ReportRow.sum(row, nil, @report.fields) %>
 <tr class="<% if group_fields.size >= 2 %>sum-<% end %>totals">
   <% (@report.groups.size - 1).times do %>
     <td class="indent">&nbsp;</td>
@@ -12,122 +12,122 @@
       <%= "Grand" %>
     <% end %> Total
   </td>
-  <% if @report.results_fields.member? 'funds' %>
+  <% if @report.fields.include? 'funds' %>
     <td class="number">
       <%= number_to_currency(row.funds, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'agency_other' %>
+  <% if @report.fields.include? 'agency_other' %>
     <td class="number">
       <%= number_to_currency(row.agency_other, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'vehicle_maint' %>
+  <% if @report.fields.include? 'vehicle_maint' %>
     <td class="number">
       <%= number_to_currency(row.vehicle_maint, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'administrative' %>
+  <% if @report.fields.include? 'administrative' %>
     <td class="number">
       <%= number_to_currency(row.administrative, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'operations' %>
+  <% if @report.fields.include? 'operations' %>
     <td class="number">
       <%= number_to_currency(row.operations, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'donations' %>
+  <% if @report.fields.include? 'donations' %>
     <td class="number">
       <%= number_to_currency(row.donations, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'total' %>
+  <% if @report.fields.include? 'total' %>
     <td class="number">
       <%= number_to_currency(row.total, :precision => 0, :negative_format => "(%u%n)") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'in_district_trips' %>
+  <% if @report.fields.include? 'in_district_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.in_district_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'out_of_district_trips' %>
+  <% if @report.fields.include? 'out_of_district_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.out_of_district_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'total_trips' %>
+  <% if @report.fields.include? 'total_trips' %>
     <td class="number">
       <%= number_with_delimiter(row.total_trips.to_i) %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'total_last_year' %>
+  <% if @report.fields.include? 'total_last_year' %>
     <td class="number">
       <%= number_with_delimiter(row.total_last_year.to_i) %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'mileage' %>
+  <% if @report.fields.include? 'mileage' %>
     <td class="number">
       <%= number_with_delimiter(row.mileage.round) %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'driver_volunteer_hours' %>
+  <% if @report.fields.include? 'driver_volunteer_hours' %>
     <td class="number">
       <%= number_with_precision(row.driver_volunteer_hours, :precision => 1, :delimiter => ',') %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'driver_paid_hours' %>
+  <% if @report.fields.include? 'driver_paid_hours' %>
     <td class="number">
       <%= number_with_precision(row.driver_paid_hours, :precision => 1, :delimiter => ',') %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'driver_total_hours' %>
+  <% if @report.fields.include? 'driver_total_hours' %>
     <td class="number">
       <%= number_with_precision(row.driver_total_hours, :precision => 1, :delimiter => ',') %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'cost_per_trip' %>
+  <% if @report.fields.include? 'cost_per_trip' %>
     <td class="number">
       <%= row.cost_per_trip.present? ? number_to_currency(row.cost_per_trip, :negative_format => "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'cost_per_mile' %>
+  <% if @report.fields.include? 'cost_per_mile' %>
     <td class="number">
       <%= row.cost_per_mile.present? ? number_to_currency(row.cost_per_mile, :negative_format => "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'cost_per_hour' %>
+  <% if @report.fields.include? 'cost_per_hour' %>
     <td class="number">
       <%= row.cost_per_hour.present? ? number_to_currency(row.cost_per_hour, :negative_format => "(%u%n)") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'miles_per_ride'%>
+  <% if @report.fields.include? 'miles_per_ride'%>
     <td class="number">
       <%= row.miles_per_ride.present? ? number_with_precision(row.miles_per_ride, :precision => 1, :delimiter => ",") : raw("&mdash;") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'turn_downs' %>
+  <% if @report.fields.include? 'turn_downs' %>
     <td class="number">
       <%= number_with_delimiter(row.turn_downs.to_i) %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'undup_riders' %>
+  <% if @report.fields.include? 'undup_riders' %>
     <td class="number">
       <%= number_with_delimiter(row.undup_riders.to_i) %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'escort_volunteer_hours' %>
+  <% if @report.fields.include? 'escort_volunteer_hours' %>
     <td class="number">
       <%= number_with_precision(row.escort_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'admin_volunteer_hours' %>
+  <% if @report.fields.include? 'admin_volunteer_hours' %>
     <td class="number">
       <%= number_with_precision(row.admin_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
   <% end %>
-  <% if @report.results_fields.member? 'total_volunteer_hours' %>
+  <% if @report.fields.include? 'total_volunteer_hours' %>
     <td class="number">
       <%= number_with_precision(row.total_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
