--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -52,6 +52,11 @@
       </li>
       
       <li class="selfclear">
+        <%= form.label :eligibility %>
+        <%= form.text_field :eligibility %>
+      </li>
+
+      <li class="selfclear">
         <%= form.label :do_not_show_on_flex_reports, "Do not show on flex reports (unless specified individually)" %>
         <%= form.check_box :do_not_show_on_flex_reports %>
       </li>
@@ -112,14 +117,17 @@
         <%= form.collection_select :trimet_report_group_id, @trimet_report_group, :id, :name, {:include_blank => true} %>
         <%= link_to "Details", [:edit, @allocation.trimet_report_group], :class => :details if @allocation.trimet_report_group %>
       </li>
+
       <li class="selfclear">
         <%= form.label :activated_on, "First day active" %>
         <%= form.text_field :activated_on, :class => "datepicker" %>
       </li>
+
       <li class="selfclear">
         <%= form.label :inactivated_on, "First day inactive" %>
         <%= form.text_field :inactivated_on, :class => "datepicker" %>
       </li>
+
       <li class="selfclear">
         <%= form.label :notes %>
         <%= form.text_area :notes %>
