Flex Reports: Add ability to view only E&D trips
This is primarily for reporting to TriMet, but can be applied to
any Flex Report. When used for Trip-based data, only "Honored" customer types
are counted. For Summary data, the entire allocation must be E&D.

--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -42,6 +42,11 @@
           <h2 class="section-header">Description</h2>
           <%= f.text_area :description %>
         </li>
+        <h2 class="section-header">Other Attributes</h2>
+        <li>
+          <%= f.label :elderly_and_disabled_only, "E&D Only" %>
+          <%= f.check_box :elderly_and_disabled_only %>
+        </li>
       </ol>
     </div>
     <ol id="filters">
