--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -53,7 +53,7 @@
       
       <li class="selfclear">
         <%= form.label :eligibility %>
-        <%= form.text_field :eligibility %>
+        <%= form.select :eligibility, Allocation::ELIGIBILITIES, {:prompt => "<Select Option>"} %>
       </li>
 
       <li class="selfclear">
