--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -11,4 +11,7 @@
   <li><%= link_to "TriMet Programs", :controller => "trimet_programs" %></li>
   <li><%= link_to "TriMet Report Groups", :controller => "trimet_report_groups" %></li>
   <li><%= link_to "Flex Report Categories", :controller => "report_categories" %></li>
+  <% if current_user.try :is_admin %>
+    <li><%= link_to "Users", :controller => "users" %></li>
+  <% end %>
 </ul>
