Allocations: More tweaking of eligibilities

--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -52,7 +52,7 @@
       </li>
       
       <li class="selfclear">
-        <%= form.label :eligibility %>
+        <%= form.label :eligibility, "Service Eligibility" %>
         <%= form.select :eligibility, Allocation::ELIGIBILITIES, {:prompt => "<Select Option>"} %>
       </li>
 
